--- a/clients/cimi/views/network_templates/show.haml
+++ b/clients/cimi/views/network_templates/show.haml
@@ -15,14 +15,11 @@
   %p
     %a{ :href => "#{@network_template.id}?format=xml", :class => 'label warning' } XML
     %a{ :href => "#{@network_template.id}?format=json", :class => 'label warning' } JSON
-%blockquote
-  %p
-    The Network Template is a set of configuration values for realizing a Network.
-    An instance of Network Template may be used to create multiple Networks
 
--details 'NetworkConfiguration details' do
+-details do
   -row 'ID', @network_template.id
+  -row 'Name',@network_template.name
   -row 'Description',@network_template.description
   -row 'Created',@network_template.created
-  -row 'NetworkConfiguration', @network_template.network_config.href
-  -row 'RoutingGroup', @network_template.routing_group.href
+  -row 'Network Config', url("/cimi/network_config/#{href_to_id @network_template.network_config.href}")
+  -row 'Forwarding Group', url("/cimi/forwarding_groups/#{href_to_id @network_template.forwarding_group.href}")
