--- a/clients/cimi/public/app.css
+++ b/clients/cimi/public/app.css
@@ -7,6 +7,7 @@ body {
 }
 .container > footer p {
   text-align: center; /* center align it with the container */
+  font-size : 80%;
 }
 .container {
   width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
@@ -28,16 +29,17 @@ body {
 /* Page header tweaks */
 .page-header {
   background-color: #f5f5f5;
-  margin: -20px -20px 10px;
+  margin: -28px -20px 10px;
   padding-bottom : 0px;
 }
 
 .page-header h1 {
   padding : 10px 20px;
-}
+} 
 
 .page-header .breadcrumb {
-  margin : 5px -1px 0px -1px;
+  margin : 5px 0px 0px 0px;
+  border-top: 1px solid rgba(0,0,0,.15);
 }
 
 /* Styles you shouldn't keep as they are for displaying this base example only */
@@ -60,10 +62,12 @@ body {
   margin-right : 30px;
 }
 
-#toolbar p:first-child {
+#toolbar {
   text-align : right;
 }
 
 table caption h3 {
   text-align : left;
 }
+
+h5 { text-align : left; }
