--- a/clients/cimi/views/volume_configurations/index.haml
+++ b/clients/cimi/views/volume_configurations/index.haml
@@ -1,4 +1,4 @@
-- @title=@volume_configurations.description
+- @title=collection_name @volume_configurations
 
 - content_for :breadcrumb do
   %ul.breadcrumb
@@ -13,7 +13,6 @@
     %a{ :href => "#{@volume_configurations.id}?format=xml", :class => 'label warning' } XML
     %a{ :href => "#{@volume_configurations.id}?format=json", :class => 'label warning' } JSON
 
-%h3 VolumeConfigurationsCollection
 %ul
   - @volume_configurations.volume_configurations.each do |conf|
     %li
@@ -21,5 +20,4 @@
 
 - details 'VolumeConfigurationCollection details' do
   -row 'ID', @volume_configurations.id
-  -row 'Description', @volume_configurations.description
-  -row 'Created', @volume_configurations.created
+  -row 'Count', @volume_configurations.count
