--- a/clients/cimi/views/volume_configurations/show.haml
+++ b/clients/cimi/views/volume_configurations/show.haml
@@ -16,19 +16,10 @@
     %a{ :href => "#{@volume_configuration.id}?format=xml", :class => 'label warning' } XML
     %a{ :href => "#{@volume_configuration.id}?format=json", :class => 'label warning' } JSON
 
-%blockquote
-  %p
-    The Volume Configuration entity represents the set of configuration values
-    that define the (virtual) hardware resources of a to-be-realized Volume
-    Instance. Volume Configurations are created by Providers and MAY, at the
-    Providers discretion, be created by Consumers.
 
-- details 'VolumeConfiguration details' do
+- details do
   -row 'ID', @volume_configuration.id
   -row 'Description', @volume_configuration.description
   -row 'Created', @volume_configuration.created
-  -row 'Format', boolean_span_for(@volume_configuration.format)
-  -row 'Supports snapshots', boolean_span_for(@volume_configuration.supports_snapshots)
-  -row 'Guest interface', boolean_span_for(@volume_configuration.guest_interface)
-  -row 'Capacity', ([@volume_configuration.capacity.quantity, @volume_configuration.capacity.units].join('&nbsp;'))
+  -row 'Capacity', @volume_configuration.capacity
 
