--- a/site/layouts/partials/default/nav.html
+++ b/site/layouts/partials/default/nav.html
@@ -37,5 +37,12 @@
       <li><a href="/drivers.html">Drivers API</a></li>
     </ul>
   </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">CIMI<b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><a href="/cimi-rest.html">CIMI REST API</a></li>
+      <li><a href="/cimi-curl.html">CIMI cURL Examples</a></li>
+    </ul>
+  </li>
   <li><a href="/contact.html">Contact</a></li>
 </ul>
