CIMI UI/HTML client fix (MachineImages show) - DTACLOUD-405
https://issues.apache.org/jira/browse/DTACLOUD-405

--- a/clients/cimi/views/machine_images/show.haml
+++ b/clients/cimi/views/machine_images/show.haml
@@ -22,5 +22,6 @@
   - row 'Description', @machine_image.description
   - row 'State', @machine_image.state
   - row 'Created', @machine_image.created
-  - row 'Image Location', @machine_image.image_location.href
-  - row 'Image Data', @machine_image.image_data
+  - row 'Type', @machine_image.type
+  - row 'Image Location', @machine_image.image_location
+  - row 'Related Image', @machine_image.related_image.href
