--- a/server/views/errors/403.xml.haml
+++ b/server/views/errors/403.xml.haml
@@ -1,2 +1,8 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
+  %backend{ :driver => driver_symbol, :provider => "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}" }
+  %backtrace=cdata(@error.backtrace.join("\n"))
+  - if params
+    %request
+      - params.each do |k, v|
+        %param{ :name => k}=v
   %message Method not allowed for this resource
