--- a/site/layouts/partials/default/nav.html
+++ b/site/layouts/partials/default/nav.html
@@ -33,7 +33,8 @@
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">API<b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="/rest-api.html">REST API</a></li>
+      <li><a href="/rest-api.html">Deltacloud REST API</a></li>
+      <li><a href="/curl-examples.html">Deltacloud API cURL examples</a></li>
       <li><a href="/drivers.html">Drivers API</a></li>
     </ul>
   </li>
