Core: Add root_type attr to Image and HardwareProfile
The new 'root_type' attribute in case of Image contains information
about the root device type. There are two possible values:

persistent - Volume or other 'persistent' storage type (EBS)
transient  - Default device that is part of the Image itself (instance-store)

In case of HardwareProfile this attribute is presented as a fixed
'property' called 'root_type'. The possible values are the same as above.

The hardware profile and image root_type attributes *must* match in order
to create a new instance. In other case an HTTP 400 (Bad Request) will be
returned to client.

API-Change: Added the 'root_type' attribute to Image and HardwareProfile

--- a/server/views/images/show.html.haml
+++ b/server/views/images/show.html.haml
@@ -21,11 +21,14 @@
       %li{ :'data-role' => 'list-divider'} Creation Time
       %li
         %p{ :'data-role' => 'fieldcontain'}=@image.creation_time
+    %li{ :'data-role' => 'list-divider'} Root Device Type
+    %li
+      %p{ :'data-role' => 'fieldcontain'}=@image.root_type
     %li{ :'data-role' => 'list-divider'} Architecture
     %li
       %p{ :'data-role' => 'fieldcontain'}=@image.architecture
     - if @image.hardware_profiles
-      %li{ :'data-role' => 'list-divider'} Hardware Profiles
+      %li{ :'data-role' => 'list-divider'} Compatible Hardware Profiles
       %li
         %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
           - @image.hardware_profiles.each do |hwp|
