Deltacloud - adds maps openstack 'regions' to deltacloud realms - DTACLOUD-443
https://issues.apache.org/jira/browse/DTACLOUD-443

API-Change: Added the 'resource_types' attribute to Realm model

--- a/server/views/realms/index.html.haml
+++ b/server/views/realms/index.html.haml
@@ -10,4 +10,6 @@
           %img{ :class => 'ui-link-thumb', :src => '/images/realm.png'}
           %h3= realm.name
           %p=[realm.id, realm.limit].join(', ')
+          -if realm.resource_types
+            %p=realm.resource_types.join(",")
           %span{ :class => 'ui-li-count'}=realm.state
