--- a/server/views/realms/show.html.haml
+++ b/server/views/realms/show.html.haml
@@ -15,3 +15,7 @@
     %li{ :'data-role' => 'list-divider'} Limit
     %li
       %p{ :'data-role' => 'fieldcontain'}=@realm.limit
+    - if @realm.resource_types
+      %li{ :'data-role' => 'list-divider'} Resource Types
+      %li
+        %p{ :'data-role' => 'fieldcontain'}=@realm.resource_types
