DTACLOUD-457 RHEVm, Passing an invalid instance ID to start instance results in traceback with 500.
TrackedAt: http://tracker.deltacloud.org/patch/0f9ec84ff0ad613e28d1b49c3038a75010d56393

--- a/server/views/errors/403.xml.haml
+++ b/server/views/errors/403.xml.haml
@@ -1,6 +1,7 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
   %backend{ :driver => driver_symbol, :provider => "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}" }
-  %backtrace=cdata(@error.backtrace.join("\n"))
+  - if @error.respond_to?(:backtrace) and !@error.backtrace.nil?
+    %backtrace=cdata(@error.backtrace.join("\n"))
   - if params
     %request
       - params.each do |k, v|
