Core: Fixed JSON and XML serialization of realms

--- a/server/views/realms/show.xml.haml
+++ b/server/views/realms/show.xml.haml
@@ -10,5 +10,4 @@
       =cdata do
         =@realm.limit
   - @realm.resource_types.each do |r|
-    %resource_type<
-      =r
+    %resource_type=r
