FGCP: added support for storage_volume creation from snapshot Addresses DTACLOUD-492 https://issues.apache.org/jira/browse/DTACLOUD-492

--- a/server/views/storage_volumes/show.html.haml
+++ b/server/views/storage_volumes/show.html.haml
@@ -24,7 +24,7 @@
       - if @storage_volume.instance_id
         %a{ :href => instance_url( @storage_volume.instance_id)}
           = @storage_volume.instance_id
-      - elsif @storage_volume.state == "AVAILABLE"
+      - elsif @storage_volume.state and @storage_volume.state != "IN-USE"
         %p{ :'data-role' => 'fieldcontain'}= 'none (detached)'
       -else
         %p{ :'data-role' => 'fieldcontain'}= 'unknown'
