--- a/server/views/firewalls/new.html.haml
+++ b/server/views/firewalls/new.html.haml
@@ -1,4 +1,4 @@
-%h1 New Firewall
+%h1 New firewall
 
 %form{:action => firewalls_url, :method => :post, :'data-ajax' => 'false'}
   %label
@@ -8,4 +8,4 @@
   %label
     Firewall Description
     %input{:name => 'description', :size => 100}/
-  %input{:type => :submit, :name => "commit", :value=>"create"}
+  %input{:type => :submit, :name => "commit", :value=>"Create"}
