--- a/server/views/instances/run_command.html.haml
+++ b/server/views/instances/run_command.html.haml
@@ -1,4 +1,4 @@
-=header "Run a command on #{@instance.name}"
+=header "Run command on #{@instance.name}"
 =subheader "#{@instance.id}"
 
 %div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
