--- a/server/views/load_balancers/new.html.haml
+++ b/server/views/load_balancers/new.html.haml
@@ -35,5 +35,5 @@
         Instances port:
       %input{ :name => "listener_instance_port", :size => 30}
     %p
-      %input{ :type => :submit, :name => "commit", :value => "create" }/
+      %input{ :type => :submit, :name => "commit", :value => "Create" }/
 
