--- a/server/views/metrics/show.html.haml
+++ b/server/views/metrics/show.html.haml
@@ -7,7 +7,7 @@
       %div{ :'data-role' => :'collapsible', :'data-collapse' => 'true'}
         %h3=p.name
         %table{ :summary => "#{p.name} values"}
-          %caption Statistics for last 60 minutes
+          %caption Statistics for the last 60 minutes
           %tr
             %th Time
             %th Minimum
