--- a/server/views/storage_snapshots/new.html.haml
+++ b/server/views/storage_snapshots/new.html.haml
@@ -6,4 +6,4 @@
       Volume ID:
     %input{ :name => 'volume_id', :size => 30, :value => params[:volume_id] }
   %p
-    %input{ :type => :submit, :name => "commit", :value => "create" }/
+    %input{ :type => :submit, :name => "commit", :value => "Create" }/
