--- a/server/views/storage_volumes/new.html.haml
+++ b/server/views/storage_volumes/new.html.haml
@@ -1,4 +1,4 @@
-=header "Create new Storage Volume"
+=header "Create new storage volume"
 
 
 %div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
@@ -20,4 +20,4 @@
         Realm ID:
       %input{ :name => "realm_id", :size => 10, :value => driver.realms(credentials).first.id}
     %p
-      %input{ :type => :submit, :name => "commit", :value => "create" }/
+      %input{ :type => :submit, :name => "commit", :value => "Create" }/
