--- a/server/views/buckets/show.html.haml
+++ b/server/views/buckets/show.html.haml
@@ -19,5 +19,5 @@
     %li{ :'data-role' => 'list-divider'} Actions
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
-        %a{ :href => new_blob_form_url(@bucket), :'data-role' => "button", :'data-ajax' => 'false'} Create a new blob
+        %a{ :href => new_blob_form_url(@bucket), :'data-role' => "button", :'data-ajax' => 'false'} Create new blob...
         =link_to_action 'Delete bucket', destroy_bucket_url(@bucket.name), :delete
