--- a/server/views/load_balancers/show.html.haml
+++ b/server/views/load_balancers/show.html.haml
@@ -1,4 +1,4 @@
-=header "Loadbalancer"
+=header "Load balancer"
 =subheader @load_balancer.id
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
@@ -20,7 +20,7 @@
       %li
         %a{ :href => instance_url(instance[:id]), :'data-ajax' => 'false'}
           %h3=instance[:name]
-          =link_to_action "UnRegister", url_for("load_balancers/#{@load_balancer.id}/unregister?instance_id=#{instance[:id]}"), :post
+          =link_to_action "Unregister", url_for("load_balancers/#{@load_balancer.id}/unregister?instance_id=#{instance[:id]}"), :post
     %li{ :'data-role' => 'list-divider'} Unregistered Instances
     - @unregistered_instances.each do |instance|
       %li
